Corrected area of instructions overlapping on mobile devices in CSS media query

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -531,7 +531,13 @@ footer .next_btn:hover {
     }
 
     .instructions_area .instructions_heading {
-        font-size: 30px;
+        font-size: 20px;
+        padding: 5px;
+    }
+
+    .instructions_area .instructions_list .inst {
+        margin-bottom: 30px;
+        margin-top: 20px;
     }
 
     footer {
